Added new project pages and images: Car Detailing, Spa Salon, and Resto

--- a/details/spasalon.html
+++ b/details/spasalon.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Restaurant Web App - Project Details</title>
+  <title>SPA & Salon Website - Project Details</title>
 
   <!-- Bootstrap CSS & Icons -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
@@ -16,7 +16,7 @@
     body {
       font-family: 'Poppins', sans-serif;
       background-color: #0a0a0a;
-      color: #e0e0e0;
+      color: #f5f5f5;
     }
   </style>
 </head>
@@ -26,14 +26,14 @@
       
       <!-- Header -->
       <h1 class="text-center text-warning fw-bold mb-4">
-        <i class="bi bi-egg-fried me-2"></i>
-        Restaurant Web App
+        <i class="bi bi-flower1 me-2"></i>
+        SPA & Salon Website
       </h1>
 
       <!-- Project Image -->
       <div class="text-center mb-4">
-        <img src="../images/resto.png" 
-             alt="Restaurant Web App Screenshot" 
+        <img src="../images/spa.png" 
+             alt="SPA & Salon Website Screenshot" 
              class="img-fluid rounded"
              style="max-width: 700px;">
       </div>
@@ -41,43 +41,43 @@
       <!-- Project Description -->
       <div class="bg-warning bg-opacity-10 border-start border-warning border-4 p-3 rounded mb-4">
         <p class="mb-0">
-          <i class="bi bi-lightning-fill text-warning me-2"></i>
-          A modern restaurant web app that allows customers to browse digital menus, place dine-in or delivery orders, track their meals, and pay securely — all from their device.
+          <i class="bi bi-stars text-warning me-2"></i>
+          A modern, elegant website for spas and salons to showcase services, manage bookings, and attract customers. Built for mobile responsiveness, with a clean layout, service gallery, and contact integrations.
         </p>
       </div>
 
       <!-- Features Section -->
       <h4 class="text-warning fw-semibold mb-3">
-        <i class="bi bi-star-fill me-2"></i>Core Features
+        <i class="bi bi-gear-fill me-2"></i>Key Features
       </h4>
 
       <div class="row">
         <div class="col-md-4 mb-3">
           <div class="bg-warning bg-opacity-10 border border-warning rounded p-3 text-center h-100">
-            <i class="bi bi-menu-app display-6 text-warning mb-2"></i>
-            <h5 class="text-light">Interactive Menu</h5>
-            <p class="mb-0">Browse a full-featured restaurant menu with photos, prices, and filters</p>
+            <i class="bi bi-calendar-check display-6 text-warning mb-2"></i>
+            <h5 class="text-light">Online Booking</h5>
+            <p class="mb-0">Easily schedule appointments through an integrated booking form</p>
           </div>
         </div>
         <div class="col-md-4 mb-3">
           <div class="bg-warning bg-opacity-10 border border-warning rounded p-3 text-center h-100">
-            <i class="bi bi-clock-history display-6 text-warning mb-2"></i>
-            <h5 class="text-light">Order Tracking</h5>
-            <p class="mb-0">Real-time updates from kitchen preparation to table or delivery</p>
+            <i class="bi bi-person-lines-fill display-6 text-warning mb-2"></i>
+            <h5 class="text-light">Stylist Profiles</h5>
+            <p class="mb-0">Highlight staff experience, specialties, and client testimonials</p>
           </div>
         </div>
         <div class="col-md-4 mb-3">
           <div class="bg-warning bg-opacity-10 border border-warning rounded p-3 text-center h-100">
-            <i class="bi bi-wallet2 display-6 text-warning mb-2"></i>
-            <h5 class="text-light">Payment Integration</h5>
-            <p class="mb-0">Accept secure payments via card, e-wallet, or QR code</p>
+            <i class="bi bi-image display-6 text-warning mb-2"></i>
+            <h5 class="text-light">Service Gallery</h5>
+            <p class="mb-0">Showcase treatments, packages, and spa interiors with image galleries</p>
           </div>
         </div>
       </div>
 
       <!-- Technologies Used -->
       <h4 class="text-warning fw-semibold mt-4 mb-3">
-        <i class="bi bi-tools me-2"></i>Technologies Used
+        <i class="bi bi-code-slash me-2"></i>Technologies Used
       </h4>
 
       <div class="d-flex flex-wrap gap-2 mb-4">
@@ -89,12 +89,6 @@
         </span>
         <span class="badge bg-secondary fs-6 py-2 px-3">
           <i class="bi bi-filetype-js me-1"></i>JavaScript
-        </span>
-        <span class="badge bg-secondary fs-6 py-2 px-3">
-          <i class="bi bi-terminal me-1"></i>PHP
-        </span>
-        <span class="badge bg-secondary fs-6 py-2 px-3">
-          <i class="bi bi-database me-1"></i>MySQL
         </span>
       </div>
 
