--- a/index.html
+++ b/index.html
@@ -178,18 +178,21 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="images/ecommerce.png" alt="E-Commerce Website">
+                        <img src="images/resto.png" alt="Restaurant Website">
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">E-Commerce Website</h3>
-                        <p class="project-description">A full-stack e-commerce platform with user authentication, product catalog, shopping cart, and payment integration. Built with modern technologies for optimal performance.</p>
+                        <h3 class="project-title">Restaurant Website</h3>
+                        <p class="project-description">
+                        A modern and responsive website for showcasing a restaurant’s brand, menu, and ambiance. Features include online reservations, interactive gallery, customer testimonials, and mobile-friendly navigation.
+                        </p>
                         <div class="project-technologies">
                             <span class="tech-tag">HTML5</span>
                             <span class="tech-tag">CSS3</span>
                             <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">Bootstrap</span>
                         </div>
                         <div class="project-links">
-                            <a href="details/ecommerce.html" class="project-link learn-more" target="_blank">
+                            <a href="details/foodorder.html" class="project-link learn-more" target="_blank">
                                 <span>🔍</span>
                                 <span>Learn More</span>
                             </a>
@@ -199,20 +202,22 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="images/taskmanagement.jpeg" alt="Task Management App">
+                        <img src="images/car.png" alt="Car Detailing Service">
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Task Management App</h3>
-                        <p class="project-description">A productivity app for managing tasks and projects with real-time collaboration features and intuitive drag-and-drop interface. Perfect for team productivity.</p>
+                        <h3 class="project-title">Car Detailing Website</h3>
+                        <p class="project-description">
+                            A modern and responsive website for showcasing premium car detailing, paint correction, and ceramic coating services. Designed for automotive businesses seeking a clean and powerful web presence.
+                        </p>
                         <div class="project-technologies">
                             <span class="tech-tag">HTML5</span>
                             <span class="tech-tag">CSS3</span>
                             <span class="tech-tag">JavaScript</span>
                         </div>
                         <div class="project-links">
-                            <a href="details/taskmanagement.html" class="project-link learn-more" target="_blank">
+                            <a href="details/cardetailing.html" class="project-link learn-more" target="_blank">
                                 <span>🔍</span>
-                                <span>Learn More</span>
+                                <span>View Project</span>
                             </a>
                         </div>
                     </div>
@@ -244,21 +249,20 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="images/handmade.png" alt="Handmade Crafts Website">
+                        <img src="images/spa.png" alt="SPA & Salon Website">
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Handmade Crafts Store</h3>
+                        <h3 class="project-title">SPA & Salon Website</h3>
                         <p class="project-description">
-                            An eCommerce website showcasing unique handmade items such as keychains, journals, and plant accessories. Fully responsive with categories and product filtering.
+                        A sleek and responsive website for promoting spa and salon services. Includes features like service booking, stylist profiles, pricing details, and customer testimonials. Designed for seamless user experience across all devices.
                         </p>
                         <div class="project-technologies">
                             <span class="tech-tag">HTML5</span>
                             <span class="tech-tag">CSS3</span>
                             <span class="tech-tag">JavaScript</span>
-                            <span class="tech-tag">Bootstrap</span>
                         </div>
                         <div class="project-links">
-                            <a href="details/handmade.html" class="project-link learn-more" target="_blank">
+                            <a href="details/spasalon.html" class="project-link learn-more" target="_blank">
                                 <span>🔍</span>
                                 <span>Learn More</span>
                             </a>
@@ -266,29 +270,28 @@
                     </div>
                 </div>
 
+
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="images/plants.png" alt="Plant Shop Website">
+                        <img src="images/ecommerce.png" alt="E-Commerce Website">
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Plant Shop Website</h3>
-                        <p class="project-description">
-                            A responsive website for a plant and garden store. Features categories like indoor plants, herbs, and trees with cart functionality and plant care tips.
-                        </p>
+                        <h3 class="project-title">E-Commerce Website</h3>
+                        <p class="project-description">A full-stack e-commerce platform with user authentication, product catalog, shopping cart, and payment integration. Built with modern technologies for optimal performance.</p>
                         <div class="project-technologies">
                             <span class="tech-tag">HTML5</span>
                             <span class="tech-tag">CSS3</span>
                             <span class="tech-tag">JavaScript</span>
-                            <span class="tech-tag">Bootstrap</span>
                         </div>
                         <div class="project-links">
-                            <a href="details/plants.html" class="project-link learn-more" target="_blank">
+                            <a href="details/ecommerce.html" class="project-link learn-more" target="_blank">
                                 <span>🔍</span>
                                 <span>Learn More</span>
                             </a>
                         </div>
                     </div>
                 </div>
+
             </div>
 
             <!-- View More Button -->
@@ -324,25 +327,69 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="images/food.png" alt="Food Ordering App">
+                        <img src="images/plants.png" alt="Plant Shop Website">
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Food Ordering App</h3>
+                        <h3 class="project-title">Plant Shop Website</h3>
                         <p class="project-description">
-                        A user-friendly web app for restaurants and customers to manage food orders online. It supports real-time order tracking, digital menus, and online payments, built with mobile responsiveness in mind.
+                            A responsive website for a plant and garden store. Features categories like indoor plants, herbs, and trees with cart functionality and plant care tips.
                         </p>
                         <div class="project-technologies">
-                        <span class="tech-tag">HTML5</span>
-                        <span class="tech-tag">CSS3</span>
-                        <span class="tech-tag">JavaScript</span>
-                        <span class="tech-tag">PHP</span>
-                        <span class="tech-tag">MySQL</span>
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">CSS3</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">Bootstrap</span>
                         </div>
                         <div class="project-links">
-                        <a href="details/foodorder.html" class="project-link learn-more" target="_blank">
-                            <span>🔍</span>
-                            <span>Learn More</span>
-                        </a>
+                            <a href="details/plants.html" class="project-link learn-more" target="_blank">
+                                <span>🔍</span>
+                                <span>Learn More</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="images/handmade.png" alt="Handmade Crafts Website">
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">Handmade Crafts Store</h3>
+                        <p class="project-description">
+                            An eCommerce website showcasing unique handmade items such as keychains, journals, and plant accessories. Fully responsive with categories and product filtering.
+                        </p>
+                        <div class="project-technologies">
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">CSS3</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">Bootstrap</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="details/handmade.html" class="project-link learn-more" target="_blank">
+                                <span>🔍</span>
+                                <span>Learn More</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="images/taskmanagement.jpeg" alt="Task Management App">
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">Task Management App</h3>
+                        <p class="project-description">A productivity app for managing tasks and projects with real-time collaboration features and intuitive drag-and-drop interface. Perfect for team productivity.</p>
+                        <div class="project-technologies">
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">CSS3</span>
+                            <span class="tech-tag">JavaScript</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="details/taskmanagement.html" class="project-link learn-more" target="_blank">
+                                <span>🔍</span>
+                                <span>Learn More</span>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -422,7 +469,7 @@
                     </div>
                 </div>
                 <div class="skills-category">
-                    <h3>Tools</h3>
+                    <h3>Tools and API</h3>
                     <div class="skills-grid">
                         <div class="skill-item" data-skill="90">
                             <div class="skill-icon">📱</div>
@@ -439,6 +486,15 @@
                                 <h4>Figma</h4>
                                 <div class="skill-bar">
                                     <div class="skill-progress" style="width: 85%"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill-item" data-skill="82">
+                            <div class="skill-icon">🔗</div>
+                            <div class="skill-info">
+                                <h4>REST APIs</h4>
+                                <div class="skill-bar">
+                                    <div class="skill-progress" style="width: 82%"></div>
                                 </div>
                             </div>
                         </div>
@@ -466,6 +522,26 @@
                 <div class="service-card">
                     <h3>UI/UX Prototyping</h3>
                     <p>I create prototypes and wireframes using Figma to visualize user journeys and improve design interaction.</p>
+                </div>
+                <div class="service-card">
+                    <h3>🔗 API Integration & Development</h3>
+                    <p>I specialize in integrating third-party APIs (payment gateways, maps) and building custom REST APIs to connect frontend applications with databases and external services.</p>
+                    <div class="api-experience" style="margin-top: 1rem; padding: 1rem;">
+                        <div class="api-list">
+                            <div class="api-item">
+                                <strong>Payment Integration</strong>
+                                <small> GCash APIs</small>
+                            </div>
+                            <div class="api-item">
+                                <strong>Custom REST APIs</strong>
+                                <small>PHP/Node.js backend APIs</small>
+                            </div>
+                            <div class="api-item">
+                                <strong>Data APIs</strong>
+                                <small>Weather, Maps</small>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
